--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -92,80 +92,87 @@
 </header>
 
 <div id="gradient"></div>
-<div id="card">  
-  <h2 class="choose-us">WHY CHOOSE US?</h2>
-  <p class="content">100000+ Satisfied Guests<br><br>Earn a Lifetime of Friendship and many more benefits</p>
-  <p class="content">Largest Tour Operator for exploring India<br><br>Carry zero money on the tour</p>
-</div> 
+<div id="card">
+    <h2 class="choose-us">WHY CHOOSE US?</h2>
+    <p class="content">100000+ Satisfied Guests<br><br>Earn a Lifetime of Friendship and many more benefits</p>
+    <p class="content">Largest Tour Operator for exploring India<br><br>Carry zero money on the tour</p>
+</div>
 <h4 class="tour-video">A glimpse of some of our Top Rated Tours</h4>
 <h5 class="tour-video">just to help you decide better...</h5>
 <br><br>
 <div class="container">
-  <div class="row">    
-      <div class="col-md-6 ">
-          <div class="card">
-              <div class="card-image">
-                  <div class="embed-responsive embed-responsive-16by9">
-<iframe width="560" height="315" src="https://youtube.com/embed/2kLk3biHTe4" frameborder="0" allowfullscreen></iframe>
-</div>
-                  
-              </div><!-- card image -->
-              
-              <div class="card-content">
-                  <span class="card-title">A glimpse of incredible Kashmir?</span>                    
-                  
-              </div><!-- card content -->
-              
-             
-          </div>
-      </div>
-      <div class="col-md-6 ">
-          <div class="card">
-              <div class="card-image">
-                  <div class="embed-responsive embed-responsive-16by9">
-                          <iframe width="956" height="538" src="https://www.youtube.com/embed/Dp09YvUyVYU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-                  
-              </div><!-- card image -->           
-              <div class="card-content">
-                  <span class="card-title">Gorgeous Gujarat</span>                    
-              </div><!-- card content -->              
-          </div>
-      </div>
-  </div>
-<br><br>
-      <div class="row">    
-      <div class="col-md-6 ">
-          <div class="card">
-              <div class="card-image">
-                  <div class="embed-responsive embed-responsive-16by9">
-                          <iframe width="956" height="538" src="https://www.youtube.com/embed/8mRGnOqXpQc" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-                  
-              </div><!-- card image -->
-              
-              <div class="card-content">
-                  <span class="card-title">Majestic Rajasthan </span>                    
-              </div><!-- card content -->
-              
-          </div>
-      </div>
-      <div class="col-md-6 ">
-          <div class="card">
-              <div class="card-image">
-                  <div class="embed-responsive embed-responsive-16by9">
-                          <iframe width="956" height="538" src="https://www.youtube.com/embed/2TK5WzMIQms" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-</div>
-                  
-              </div><!-- card image -->
-              
-              <div class="card-content">
-                  <span class="card-title">Serene Meghalaya</span>                    
-              </div><!-- card content -->
-              
-          </div>
-      </div>
-  </div>
+    <div class="row">
+        <div class="col-md-6 ">
+            <div class="card">
+                <div class="card-image">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe width="560" height="315" src="https://youtube.com/embed/2kLk3biHTe4" frameborder="0"
+                            allowfullscreen></iframe>
+                    </div>
+
+                </div><!-- card image -->
+
+                <div class="card-content">
+                    <span class="card-title">A glimpse of incredible Kashmir?</span>
+
+                </div><!-- card content -->
+
+
+            </div>
+        </div>
+        <div class="col-md-6 ">
+            <div class="card">
+                <div class="card-image">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe width="956" height="538" src="https://www.youtube.com/embed/Dp09YvUyVYU" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+
+                </div><!-- card image -->
+                <div class="card-content">
+                    <span class="card-title">Gorgeous Gujarat</span>
+                </div><!-- card content -->
+            </div>
+        </div>
+    </div>
+    <br><br>
+    <div class="row">
+        <div class="col-md-6 ">
+            <div class="card">
+                <div class="card-image">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe width="956" height="538" src="https://www.youtube.com/embed/8mRGnOqXpQc" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+
+                </div><!-- card image -->
+
+                <div class="card-content">
+                    <span class="card-title">Majestic Rajasthan </span>
+                </div><!-- card content -->
+
+            </div>
+        </div>
+        <div class="col-md-6 ">
+            <div class="card">
+                <div class="card-image">
+                    <div class="embed-responsive embed-responsive-16by9">
+                        <iframe width="956" height="538" src="https://www.youtube.com/embed/2TK5WzMIQms" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
+
+                </div><!-- card image -->
+
+                <div class="card-content">
+                    <span class="card-title">Serene Meghalaya</span>
+                </div><!-- card content -->
+
+            </div>
+        </div>
+    </div>
 </div>
 
 <br><br>
@@ -299,105 +306,107 @@
 <hr style="border:3px solid #f1f1f1">
 
 <div class="row">
-  <div class="side">
-    <div>5 star</div>
-  </div>
-  <div class="middle">
-    <div class="bar-container">
-      <div class="bar-5"></div>
+    <div class="side">
+        <div>5 star</div>
     </div>
-  </div>
-  <div class="side right">
-    <div>150</div>
-  </div>
-  <div class="side">
-    <div>4 star</div>
-  </div>
-  <div class="middle">
-    <div class="bar-container">
-      <div class="bar-4"></div>
+    <div class="middle">
+        <div class="bar-container">
+            <div class="bar-5"></div>
+        </div>
     </div>
-  </div>
-  <div class="side right">
-    <div>63</div>
-  </div>
-  <div class="side">
-    <div>3 star</div>
-  </div>
-  <div class="middle">
-    <div class="bar-container">
-      <div class="bar-3"></div>
+    <div class="side right">
+        <div>150</div>
     </div>
-  </div>
-  <div class="side right">
-    <div>15</div>
-  </div>
-  <div class="side">
-    <div>2 star</div>
-  </div>
-  <div class="middle">
-    <div class="bar-container">
-      <div class="bar-2"></div>
+    <div class="side">
+        <div>4 star</div>
     </div>
-  </div>
-  <div class="side right">
-    <div>6</div>
-  </div>
-  <div class="side">
-    <div>1 star</div>
-  </div>
-  <div class="middle">
-    <div class="bar-container">
-      <div class="bar-1"></div>
+    <div class="middle">
+        <div class="bar-container">
+            <div class="bar-4"></div>
+        </div>
     </div>
-  </div>
-  <div class="side right">
-    <div>20</div>
-  </div>
+    <div class="side right">
+        <div>63</div>
+    </div>
+    <div class="side">
+        <div>3 star</div>
+    </div>
+    <div class="middle">
+        <div class="bar-container">
+            <div class="bar-3"></div>
+        </div>
+    </div>
+    <div class="side right">
+        <div>15</div>
+    </div>
+    <div class="side">
+        <div>2 star</div>
+    </div>
+    <div class="middle">
+        <div class="bar-container">
+            <div class="bar-2"></div>
+        </div>
+    </div>
+    <div class="side right">
+        <div>6</div>
+    </div>
+    <div class="side">
+        <div>1 star</div>
+    </div>
+    <div class="middle">
+        <div class="bar-container">
+            <div class="bar-1"></div>
+        </div>
+    </div>
+    <div class="side right">
+        <div>20</div>
+    </div>
 </div>
 <br>
 <section id="footer">
-		<div class="container">
-			<div class="row text-center text-xs-center text-sm-left text-md-left">
-				<div class="col-xs-12 col-sm-4 col-md-4">
-					
-				</div>
-				<div class="col-xs-12 col-sm-4 col-md-4">
-					<h5>Quick links</h5>
-					<ul class="list-unstyled quick-links">
-						<li><a href="/"><i class="fa fa-angle-double-right"></i>Home</a></li>
-						<li><a href="/about"><i class="fa fa-angle-double-right"></i>About</a></li>
-						<li><a href="/contact"><i class="fa fa-angle-double-right"></i>Contact us</a></li>
-						<li><a href="/services"><i class="fa fa-angle-double-right"></i>Privacy Policy</a></li>
-						
-					</ul>
-				</div>
-				<div class="col-xs-12 col-sm-4 col-md-4">
-					
-				</div>
-			</div>
-			<div class="row">
-				<div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
-					<ul class="list-unstyled list-inline social text-center">
-						<li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-facebook"></i></a></li>
-						<li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-twitter"></i></a></li>
-						<li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-instagram"></i></a></li>
-						<li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-google-plus"></i></a></li>
-						<li class="list-inline-item"><a href="javascript:void();" target="_blank"><i class="fa fa-envelope"></i></a></li>
-					</ul>
-				</div>
-				</hr>
-			</div>	
-			<div class="row">
-				<div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
-					<p><u><a href="#">TravelEasy</a></u> is a Registered Website helping umpteen people explore India.</p>
-					<p class="h6"> All right Reversed.<a class="text-green ml-2" href="https://www.sunlimetech.com" target="_blank"></a></p>
-				</div>
-				</hr>
-			</div>	
-		</div>
-	</section>
-	<!-- ./Footer -->
+    <div class="container">
+        <div class="row text-center text-xs-center text-sm-left text-md-left">
+            <div class="col-xs-12 col-sm-4 col-md-4">
+
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4">
+                <h5>Quick links</h5>
+                <ul class="list-unstyled quick-links">
+                    <li><a href="/"><i class="fa fa-angle-double-right"></i>Home</a></li>
+                    <li><a href="/about"><i class="fa fa-angle-double-right"></i>About</a></li>
+                    <li><a href="/contact"><i class="fa fa-angle-double-right"></i>Contact us</a></li>
+                    <li><a href="/services"><i class="fa fa-angle-double-right"></i>Privacy Policy</a></li>
+
+                </ul>
+            </div>
+            <div class="col-xs-12 col-sm-4 col-md-4">
+
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-5">
+                <ul class="list-unstyled list-inline social text-center">
+                    <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-facebook"></i></a></li>
+                    <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-twitter"></i></a></li>
+                    <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-instagram"></i></a></li>
+                    <li class="list-inline-item"><a href="javascript:void();"><i class="fa fa-google-plus"></i></a></li>
+                    <li class="list-inline-item"><a href="javascript:void();" target="_blank"><i
+                                class="fa fa-envelope"></i></a></li>
+                </ul>
+            </div>
+            </hr>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 mt-2 mt-sm-2 text-center text-white">
+                <p><u><a href="#">TravelEasy</a></u> is a Registered Website helping umpteen people explore India.</p>
+                <p class="h6"> All right Reversed.<a class="text-green ml-2" href="https://www.sunlimetech.com"
+                        target="_blank"></a></p>
+            </div>
+            </hr>
+        </div>
+    </div>
+</section>
+<!-- ./Footer -->
 
 <!-- Optional JavaScript -->
 <% include partials/footer %>
