--- a/public/CSS/tour-list.css
+++ b/public/CSS/tour-list.css
@@ -1,86 +1,9 @@
-/* .sun {
-  height: 400px;
-  top: 56px;
-} */
-
-.sun-animation {
-  top: 25px;
-  -moz-animation: spin 8s infinite ease-in-out;
-  -webkit-animation: spin 8s infinite linear;
-  animation: spin 8s linear infinite;
-}
-
-@-moz-keyframes spin {
-  100% {
-    -moz-transform: rotate(360deg);
-  }
-}
-
-@-webkit-keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-  }
-}
-
-@keyframes spin {
-  100% {
-    -webkit-transform: rotate(360deg);
-    transform: rotate(360deg);
-  }
-}
-
-.travel {
-  position: absolute;
-  top: 30px;
-  left: 50px;
-}
-
-nav > .nav.nav-tabs {
-  border: none;
-  color: #fff;
-  background: #272e38;
-  border-radius: 0;
-}
-
-nav > div a.nav-item.nav-link,
-nav > div a.nav-item.nav-link.active {
-  border: none;
-  padding: 18px 25px;
-  color: #fff;
-  background: #272e38;
-  border-radius: 0;
-}
-
-nav > div a.nav-item.nav-link.active:after {
-  content: "";
-  position: relative;
-  bottom: -60px;
-  left: -10%;
-  border: 15px solid transparent;
-  border-top-color: #b2e6f3;
-}
-
-.tab-content {
-  background: #fdfdfd;
-  line-height: 25px;
-  border: 1px solid #ddd;
-  border-top: 5px solid #b2e6f3;
-  border-bottom: 5px solid #b2e6f3;
-  padding: 30px 25px;
-}
-
-nav > div a.nav-item.nav-link:hover,
-nav > div a.nav-item.nav-link:focus {
-  border: none;
-  background: #b2e6f3;
-  color: rgb(241, 13, 13);
-  border-radius: 0;
-  transition: background 0.2s linear;
-}
-
 /*footer*/
 
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+section {
+  padding: 60px 0;
+}
 
 section .section-title {
   text-align: center;
