--- a/views/itinerary.ejs
+++ b/views/itinerary.ejs
@@ -29,6 +29,10 @@
           </a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/tours">Tours
+          </a>
+        </li>
+        <li class="nav-item">
           <% if(!user){ %>
           <a class="nav-link" href="/login">Login</a>
           <% }else{ %>
